# JNI-NDK-Leaning

./: README.md  RTSP.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jni_ndk_learning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/jni_ndk_learning/: IMyAidlInterface.aidl
app/src/main/cpp/: BitmapUtils.cpp  BitmapUtils.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: logutil.h
app/src/main/cpp/ffmpeg/: ffmpeg.c
app/src/main/cpp/src/decode/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  DecodeState.h  IDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/src/media/: MusicDecoder.cpp  MusicDecoder.h  NativePlayer.cpp  NativePlayer.h
app/src/main/cpp/src/render/: AudioRender.cpp  AudioRender.h  IRender.h  IVideoRender.h  RenderVideoFrame.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/src/utils/: time.c
app/src/main/cpp/thirdLib/include/libavformat/: avformat.h
app/src/main/java/com/example/jni_ndk_learning/: App.java  MainActivity.java  MusicDecodeActivity.kt  MyServer.kt  ShowBitmapActivity.java  VideoPlayerActivity.kt
app/src/main/java/com/example/jni_ndk_learning/decode/: NativeMusicDecoder.kt  NativePlayer.kt
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/layout/: activity_main.xml  activity_music_decode.xml  activity_show_bitmap.xml  activity_video_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jni_ndk_learning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
